# remora

./: LICENSE  README.md  benchmark_ragged_batching.py  demo_atari.py  pyproject.toml  requirements.txt  run_eval.py  test_ragged_batching.py  test_ragged_simple.py  vibecheck.py  vlmeval_bench.py
notebooks/: remora_quickstart.ipynb
remora/: __init__.py  engine.py  integration.py  kernels.py  layers.py  models.py  optimizer.py  ragged.py  surgery.py
